--- a/src/app/pages/studies/studies.html
+++ b/src/app/pages/studies/studies.html
@@ -77,7 +77,7 @@
         </ion-button>-->
           <ion-item-option (click)="removeCourse(course)">
             <ion-icon name="trash"></ion-icon>
-            {{'STUDY.DEL' | translate}}
+            {{'DELETE' | translate}}
           </ion-item-option>
         </ion-item-options>
       </ion-item-sliding>
