--- a/src/app/pages/credit/credit.html
+++ b/src/app/pages/credit/credit.html
@@ -23,7 +23,7 @@
 <ion-header>
   <ion-toolbar color="cred">
     <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
+      <ion-back-button color="light"></ion-back-button>
       <img src="./assets/img/s.png" height="28" />
     </ion-buttons>
     <ion-title>{{title | translate}}</ion-title>
