--- a/src/app/pages/news/news-details/news-details.html
+++ b/src/app/pages/news/news-details/news-details.html
@@ -22,7 +22,7 @@
 <ion-header>
   <ion-toolbar color="news" secondary>
     <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
+      <ion-back-button color="light"></ion-back-button>
     </ion-buttons>
     <ion-row>
       <ion-col>
