--- a/src/app/pages/news/news.html
+++ b/src/app/pages/news/news.html
@@ -24,7 +24,7 @@
 <ion-header>
   <ion-toolbar color="news">
     <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
+      <ion-back-button color="light"></ion-back-button>
       <img src="./assets/img/s.png" height="28" />
     </ion-buttons>
     <ion-title horizontal="center">{{title | translate}}</ion-title>
