--- a/src/app/pages/events/events-details/events-details.html
+++ b/src/app/pages/events/events-details/events-details.html
@@ -22,7 +22,7 @@
 <ion-header>
   <ion-toolbar color="event" secondary>
     <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
+      <ion-back-button color="light"></ion-back-button>
     </ion-buttons>
     <ion-title>{{event.title}}</ion-title>
   </ion-toolbar>
