change back button color in css

--- a/src/app/pages/mobility/mobility.html
+++ b/src/app/pages/mobility/mobility.html
@@ -22,7 +22,7 @@
 <ion-header>
   <ion-toolbar color="mobilite">
     <ion-buttons slot="start">
-      <ion-back-button color="light"></ion-back-button>
+      <ion-back-button></ion-back-button>
       <img src="./assets/img/s.png" height="28" />
     </ion-buttons>
     <ion-title horizontal="center">{{title | translate}}</ion-title>
