--- a/src/app/pages/sports/sports.html
+++ b/src/app/pages/sports/sports.html
@@ -22,7 +22,7 @@
 <ion-header>
   <ion-toolbar color="sport">
     <ion-buttons slot="start">
-      <ion-back-button color="light"></ion-back-button>
+      <ion-back-button></ion-back-button>
       <img src="./assets/img/s.png" height="28" />
     </ion-buttons>
     <ion-title horizontal="center"><img alt="logo" height="40" src="./assets/img/logoSport.png"></ion-title>
