--- a/src/app/pages/support/support.html
+++ b/src/app/pages/support/support.html
@@ -23,7 +23,7 @@
 <ion-header>
   <ion-toolbar color="support">
     <ion-buttons slot="start">
-      <ion-back-button color="light"></ion-back-button>
+      <ion-back-button></ion-back-button>
       <img src="./assets/img/s.png" height="28" />
     </ion-buttons>
     <ion-title horizontal="center">{{title | translate}}</ion-title>
