--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -167,6 +167,10 @@ ion-tab-button {
   background-color: rgb(0, 33, 78);
 }
 
+.ion-page{
+  background-color: white !important;
+}
+
 .segment-button,
 ion-tab-button {
   color: white !important;
