--- a/src/app/pages/restaurant/restaurant.html
+++ b/src/app/pages/restaurant/restaurant.html
@@ -24,9 +24,11 @@
 <!--EN-TETE-->
 <ion-header>
   <ion-toolbar color="resto">
-    <ion-button icon-only menuToggle>
+    <ion-menu-toggle>
+<ion-button icon-only>
       <ion-icon name="menu"></ion-icon>
     </ion-button>
+</ion-menu-toggle>
     <img src="./assets/img/s.png" height="28" />
     <ion-title align="center">{{title | translate}}</ion-title>
   </ion-toolbar>
