--- a/src/app/pages/studies/course/modal-info/modal-info.html
+++ b/src/app/pages/studies/course/modal-info/modal-info.html
@@ -22,7 +22,7 @@
 -->
 <!--EN-TETE-->
 <ion-header>
-    <ion-buttons end>
+    <ion-buttons slot="primary">
         <ion-button icon-only end (click)="closeModal()">
             <ion-icon name="close"></ion-icon>
         </ion-button>
