--- a/src/app/pages/support/support.html
+++ b/src/app/pages/support/support.html
@@ -181,7 +181,7 @@
         </ion-list>
         <ion-row center>
           <ion-col text-center>
-            <ion-button round (click)="update()">{{'HELP.SEARCH' | translate}}</ion-button>
+            <ion-button shape="round" (click)="update()">{{'HELP.SEARCH' | translate}}</ion-button>
           </ion-col>
         </ion-row>
 
