--- a/src/app/pages/events/events.html
+++ b/src/app/pages/events/events.html
@@ -95,7 +95,7 @@
   </ion-list>
 
   <ion-list-header *ngIf="(noevents && !searching)">
-    {{'EVENTS.NOTHING' | translate}}
+    <ion-label>{{'EVENTS.NOTHING' | translate}}</ion-label>
   </ion-list-header>
 </ion-content>
 
