--- a/src/app/pages/restaurant/restaurant.html
+++ b/src/app/pages/restaurant/restaurant.html
@@ -24,12 +24,10 @@
 <!--EN-TETE-->
 <ion-header>
   <ion-toolbar color="resto">
-    <ion-menu-toggle>
-<ion-button icon-only>
-      <ion-icon name="menu"></ion-icon>
-    </ion-button>
-</ion-menu-toggle>
-    <img src="./assets/img/s.png" height="28" />
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+      <img src="./assets/img/s.png" height="28" />
+    </ion-buttons>
     <ion-title align="center">{{title | translate}}</ion-title>
   </ion-toolbar>
 </ion-header>
