--- a/src/app/pages/studies/exam/exam.html
+++ b/src/app/pages/studies/exam/exam.html
@@ -23,7 +23,10 @@
 <!--EN-TETE-->
 <ion-header>
   <ion-toolbar color="etudes">
-    <img src="./assets/img/s.png" height="28" />
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+      <img src="./assets/img/s.png" height="28" />
+    </ion-buttons>
     <ion-title align="center"></ion-title>
   </ion-toolbar>
 
