--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,22 +3,29 @@
     <ion-menu menuId="mainMenu">
       <ion-header>
         <ion-toolbar padding color="home">
-          <img src="./assets/img/s.png" height="28"/>
+          <img src="./assets/img/s.png" height="28" />
           <ion-title class="menu-title">Stud.UCLouvain</ion-title>
         </ion-toolbar>
-      </ion-header>      <ion-content>
+      </ion-header>
+      <ion-content>
         <ion-list scroll=true>
           <ion-item button *ngFor="let p of campusPages" (click)="openRootPage(p)">
-            <div class="box"><img src={{p.icon}} width="35" height="35" /> <span>&nbsp; {{p.title | translate}}</span>
-            </div>
+            <ion-label>
+              <div class="box"><img src={{p.icon}} width="35" height="35" /> <span>&nbsp; {{p.title | translate}}</span>
+              </div>
+            </ion-label>
           </ion-item>
           <ion-item button *ngFor="let p of studiePages" (click)="openRootPage(p)">
-            <div class="box"><img src={{p.icon}} width="35" height="35" /> <span>&nbsp; {{p.title | translate}}</span>
-            </div>
+            <ion-label>
+              <div class="box"><img src={{p.icon}} width="35" height="35" /> <span>&nbsp; {{p.title | translate}}</span>
+              </div>
+            </ion-label>
           </ion-item>
           <ion-item button *ngFor="let p of toolPages" (click)="openRootPage(p)">
-            <div class="box"><img src={{p.icon}} width="35" height="35" /> <span>&nbsp; {{p.title | translate}}</span>
-            </div>
+            <ion-label>
+              <div class="box"><img src={{p.icon}} width="35" height="35" /> <span>&nbsp; {{p.title | translate}}</span>
+              </div>
+            </ion-label>
           </ion-item>
         </ion-list>
       </ion-content>
