--- a/src/app/pages/news/news.html
+++ b/src/app/pages/news/news.html
@@ -72,7 +72,9 @@
   <ng-container *ngIf="segment === 'fac'">
     <ion-list *ngIf="!userS.hasFac() && facsegment === 'news'">
       <ion-item-group *ngFor="let sector of listFac">
-        <ion-item-divider><strong>{{sector.name}}</strong></ion-item-divider>
+        <ion-item-divider><strong>
+            <ion-label>{{sector.name}}</ion-label>
+          </strong></ion-item-divider>
         <ion-item *ngFor="let facs of sector.facs">
           <ion-label>{{facs.acro}} : {{facs.name}}</ion-label>
           <ion-radio slot="start" (click)="updateFac(facs.acro)"></ion-radio>
@@ -85,7 +87,7 @@
       <ion-button center fill="clear" size="small" slot="start" text-center
         (click)="openURL('https://sites.uclouvain.be/sgsi-apps/shib-mesvalves/prod/')">
         <ion-icon name='share-alt'></ion-icon>
-        {{'NEWS.MESVALVES' | translate}}
+        <ion-label>{{'NEWS.MESVALVES' | translate}}</ion-label>
       </ion-button>
     </ion-item>
     <!--------------------------- ACTUALITES FAC ----------------------------------------->
@@ -98,7 +100,8 @@
           <h2 *ngIf="facsegment === 'news'"><strong>Faculté : {{userS.fac}}</strong></h2>
         </ion-col>
       </ion-row>
-      <ion-button center fill="clear" size="small" slot="start" (click)="openURL(site)" *ngIf="site.length > 0 && facsegment ==='news'">
+      <ion-button center fill="clear" size="small" slot="start" (click)="openURL(site)"
+        *ngIf="site.length > 0 && facsegment ==='news'">
         <ion-icon name='share-alt'></ion-icon>
         {{'NEWS.WEB' | translate}}
       </ion-button>
@@ -124,14 +127,15 @@
       </ion-item>
     </ion-list>
     <ion-list-header *ngIf="nonews && !searching">
-      {{'NEWS.NOTHING' | translate}}
+      <ion-label>{{'NEWS.NOTHING' | translate}}</ion-label>
     </ion-list-header>
   </ng-container>
 
 </ion-content>
 
 <!----------------- BUTTON TO CHANGE FAC ------------------------->
-<ion-fab slot="fixed" vertical="bottom" horizontal="end" *ngIf="segment==='fac' && facsegment === 'news' && userS.hasFac()">
+<ion-fab slot="fixed" vertical="bottom" horizontal="end"
+  *ngIf="segment==='fac' && facsegment === 'news' && userS.hasFac()">
   <ion-fab-button (click)="removeFac(fac)">
     <ion-icon name="swap"></ion-icon>
   </ion-fab-button>
