--- a/src/app/pages/sports/sports-filter/sports-filter.html
+++ b/src/app/pages/sports/sports-filter/sports-filter.html
@@ -57,7 +57,9 @@
     </ion-buttons>
   </ion-toolbar>
   <ion-list>
-    <ion-list-header>{{'SPORTS.SPORTS' | translate}}</ion-list-header>
+    <ion-list-header>
+      <ion-label>{{'SPORTS.SPORTS' | translate}}</ion-label>
+    </ion-list-header>
 
     <ion-item *ngFor="let category of categories">
       <ion-label>{{category.name}}</ion-label>
