--- a/src/app/pages/studies/course/course.html
+++ b/src/app/pages/studies/course/course.html
@@ -53,17 +53,19 @@
     <ion-item-sliding *ngFor="let activity of displayedActi" #slidingItem>
       <ion-item
         *ngIf="activity.type === segment || (activity.type === 'TP' && segment ==='TD') || (activity.isExam && segment === 'Examen')">
-        <h2 text-center> {{'COURSE.ACTIVITY' | translate}} : {{activity.type}} </h2>
-        <p> {{activity.start | date: 'dd/MM/yyyy H:mm' }}
-          &mdash; {{activity.end | date: 'H:mm' }} </p>
-        <p> {{'COURSE.AUDIT' | translate}} : {{activity.auditorium}}</p>
-        <p>{{'COURSE.STUDENT' | translate}} :
-          <ion-button (click)="toggleGroup(activity.start)"> {{'COURSE.SHOW' | translate }} </ion-button>
-        </p>
-        <p [hidden]="!utilsServices.isGroupShown(activity.start, shownGroup)" style="display:inline"
-          [innerHTML]="activity.students"></p>
-        <p *ngIf="activity.teachers.length>0"> {{'COURSE.TEACHER' | translate}} : {{activity.teachers}}</p>
-        <p> {{activity.name}} </p>
+        <ion-label>
+          <h2 text-center> {{'COURSE.ACTIVITY' | translate}} : {{activity.type}} </h2>
+          <p> {{activity.start | date: 'dd/MM/yyyy H:mm' }}
+            &mdash; {{activity.end | date: 'H:mm' }} </p>
+          <p> {{'COURSE.AUDIT' | translate}} : {{activity.auditorium}}</p>
+          <p>{{'COURSE.STUDENT' | translate}} :
+            <ion-button (click)="toggleGroup(activity.start)"> {{'COURSE.SHOW' | translate }} </ion-button>
+          </p>
+          <p [hidden]="!utilsServices.isGroupShown(activity.start, shownGroup)" style="display:inline"
+            [innerHTML]="activity.students"></p>
+          <p *ngIf="activity.teachers.length>0"> {{'COURSE.TEACHER' | translate}} : {{activity.teachers}}</p>
+          <p> {{activity.name}} </p>
+          <ion-label>
       </ion-item>
 
       <ion-item-options side="end">
@@ -77,7 +79,7 @@
   </ion-list>
   <ion-list-header
     *ngIf="(segment === 'TD' && noTP) || (segment === 'Cours magistral' && noCM) || (segment === 'Examen' && noEx)">
-    {{'COURSE.NO' | translate}}
+    <ion-label>{{'COURSE.NO' | translate}}</ion-label>
   </ion-list-header>
 
   <ion-fab slot="fixed" right vertical="bottom" *ngIf="segment === 'Cours magistral' || segment === 'TD'">
