--- a/src/app/pages/studies/studies.html
+++ b/src/app/pages/studies/studies.html
@@ -53,9 +53,15 @@
 <ion-menu persistent=true menuId="studiesMenu" contentId="studiesContent" side="end" type="overlay">
   <ion-content>
     <ion-buttons> </ion-buttons>
-    <ion-item button (click)="launch('http://www.uclouvain.be/')"> uclouvain.be </ion-item>
-    <ion-item button (click)="launch('https://moodleucl.uclouvain.be')"> Moodle ucl </ion-item>
-    <ion-item button (click)="openModalProject()"> {{'STUDY.CHANGEADE' | translate}} </ion-item>
+    <ion-item button (click)="launch('http://www.uclouvain.be/')">
+      <ion-label> uclouvain.be</ion-label>
+    </ion-item>
+    <ion-item button (click)="launch('https://moodleucl.uclouvain.be')">
+      <ion-label> Moodle ucl</ion-label>
+    </ion-item>
+    <ion-item button (click)="openModalProject()">
+      <ion-label>{{'STUDY.CHANGEADE' | translate}} </ion-label>
+    </ion-item>
   </ion-content>
 </ion-menu>
 <ion-router-outlet id="studiesContent" main></ion-router-outlet>
@@ -68,7 +74,9 @@
     <ion-list class="cours">
       <ion-item-sliding *ngFor="let course of listCourses" #slidingItem>
         <ion-item (click)="openCoursePage(course)">
-          <h2>{{course.acronym}} - {{course.name}}</h2>
+          <ion-label>
+            <h2>{{course.acronym}} - {{course.name}}</h2>
+          </ion-label>
         </ion-item>
         <ion-item-options side="end">
           <!--<ion-button (click)="addCourseToCalendar(slidingItem, course)" >
@@ -122,7 +130,7 @@
       <ion-list *ngFor="let activity of activities">
         <ion-item-sliding #slidingItem>
           <ion-item>
-            {{activity.sigle}}
+            <ion-label>{{activity.sigle}}</ion-label>
             <!-- - {{activity.name}}-->
           </ion-item>
           <ion-item-options>
