--- a/src/app/pages/studies/course/modal-info/modal-info.html
+++ b/src/app/pages/studies/course/modal-info/modal-info.html
@@ -53,12 +53,14 @@
                 <ion-col><strong>Enseignants</strong></ion-col>
             </ion-row>
             <ion-item *ngIf="information?.prof">
-                <ion-row *ngIf="information?.prof.length >1">
-                    <ion-col *ngFor="let item of information?.prof">{{item.nom}} {{item.prenom}}</ion-col>
-                </ion-row>
-                <ion-row *ngIf="!information?.prof.length">
-                    <ion-col>{{information?.prof.nom}} {{information?.prof.prenom}}</ion-col>
-                </ion-row>
+                <ion-label>
+                    <ion-row *ngIf="information?.prof.length >1">
+                        <ion-col *ngFor="let item of information?.prof">{{item.nom}} {{item.prenom}}</ion-col>
+                    </ion-row>
+                    <ion-row *ngIf="!information?.prof.length">
+                        <ion-col>{{information?.prof.nom}} {{information?.prof.prenom}}</ion-col>
+                    </ion-row>
+                </ion-label>
             </ion-item>
             <ion-row *ngIf="langue">
                 <ion-col><strong>Langue d'enseignement</strong></ion-col>
@@ -133,21 +135,25 @@
             <h2 class="break"><strong>Programmes le proposant </strong></h2>
 
             <ion-item *ngIf="information?.programmeprerequis.length >1">
-                <ion-row *ngFor="let item of information?.programmeprerequis">
-                    <ion-col><strong style="white-space: pre-line;">{{item.intituleProgrammeCompletFr}}</strong>
-                    </ion-col>
-                    <ion-col>{{item.sigleProgramme}}</ion-col>
-                    <ion-col>{{item.credit}} crédits</ion-col>
-                </ion-row>
+                <ion-label>
+                    <ion-row *ngFor="let item of information?.programmeprerequis">
+                        <ion-col><strong style="white-space: pre-line;">{{item.intituleProgrammeCompletFr}}</strong>
+                        </ion-col>
+                        <ion-col>{{item.sigleProgramme}}</ion-col>
+                        <ion-col>{{item.credit}} crédits</ion-col>
+                    </ion-row>
+                </ion-label>
             </ion-item>
             <ion-item *ngIf="!information?.programmeprerequis.length">
-                <ion-row>
-                    <ion-col><strong
-                            style="white-space: pre-line;">{{information?.programmeprerequis.intituleProgrammeCompletFr}}</strong>
-                    </ion-col>
-                    <ion-col>{{information?.programmeprerequis.sigleProgramme}}</ion-col>
-                    <ion-col>{{information?.programmeprerequis.credit}} crédits</ion-col>
-                </ion-row>
+                <ion-label>
+                    <ion-row>
+                        <ion-col><strong
+                                style="white-space: pre-line;">{{information?.programmeprerequis.intituleProgrammeCompletFr}}</strong>
+                        </ion-col>
+                        <ion-col>{{information?.programmeprerequis.sigleProgramme}}</ion-col>
+                        <ion-col>{{information?.programmeprerequis.credit}} crédits</ion-col>
+                    </ion-row>
+                </ion-label>
             </ion-item>
 
 
