--- a/src/app/pages/studies/course/modal-info/modal-info.html
+++ b/src/app/pages/studies/course/modal-info/modal-info.html
@@ -23,8 +23,8 @@
 <!--EN-TETE-->
 <ion-header>
     <ion-buttons slot="primary">
-        <ion-button icon-only end (click)="closeModal()">
-            <ion-icon name="close"></ion-icon>
+        <ion-button slot="end" (click)="closeModal()">
+            <ion-icon slot="icon-only" name="close"></ion-icon>
         </ion-button>
     </ion-buttons>
 </ion-header>
