--- a/src/app/pages/studies/studies.html
+++ b/src/app/pages/studies/studies.html
@@ -36,7 +36,7 @@
       </ion-menu-toggle>
     </ion-buttons>
   </ion-toolbar>
-  <ion-segment [(ngModel)]="segment">
+  <ion-segment [(ngModel)]="segment" name="segment">
     <ion-segment-button value="prog" name="prog">
       <ion-label> {{'STUDY.PROGRAM' | translate}} </ion-label>
     </ion-segment-button>
