--- a/src/app/pages/support/support.html
+++ b/src/app/pages/support/support.html
@@ -46,7 +46,6 @@
 <ion-content padding class="has-header">
   <!----------------INFORMATIONS ---------------------->
   <ng-container *ngIf="segment==='info'">
-
     <ion-item-divider (click)="toggleGroup('prob_app')">
       <ion-label>{{'HELP.PROB' | translate}}</ion-label>
     </ion-item-divider>
@@ -193,13 +192,9 @@
           </ion-col>
         </ion-row>
 
-        <ion-list *ngIf="searching">
-          <ion-item *ngFor="let emp of employees">
-            <ion-label>
-              <ion-item button no-lines (click)="goToEmpDetails(emp)">
-                <ion-label>{{emp.lastname}} {{emp.firstname}}</ion-label>
-              </ion-item>
-            </ion-label>
+        <ion-list>
+          <ion-item *ngFor="let emp of employees" button no-lines (click)="goToEmpDetails(emp)">
+            <ion-label>{{emp.lastname}} {{emp.firstname}}</ion-label>
           </ion-item>
         </ion-list>
       </ion-card-content>
